--- a/src/main/resources/db/changelog/v-1.0/2-create-roles-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/2-create-roles-table.yaml
@@ -12,9 +12,13 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: pk_roles
                     nullable: false
               - column:
                   name: name
                   type: varchar(255)
                   constraints:
                     nullable: false
+      rollback:
+        - dropTable:
+            tableName: roles
