--- a/src/main/resources/db/changelog/v-1.0/4-create-emails-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/4-create-emails-table.yaml
@@ -12,6 +12,7 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: pk_email_messages
                     nullable: false
               - column:
                   name: subject
@@ -29,3 +30,6 @@ databaseChangeLog:
                   constraints:
                     foreignKeyName: fk_user_id
                     references: users(id)
+      rollback:
+        - dropTable:
+            tableName: email_messages
