--- a/src/main/resources/db/changelog/v-1.0/8-create-upfiles-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/8-create-upfiles-table.yaml
@@ -12,6 +12,7 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: pk_upfiles
                     nullable: false
               - column:
                   name: url
@@ -37,3 +38,6 @@ databaseChangeLog:
                   constraints:
                     foreignKeyName: fk_user_id
                     references: users(id)
+      rollback:
+        - dropTable:
+            tableName: upfiles
