--- a/src/main/resources/db/changelog/v-1.0/9-create-publications-upfiles-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/9-create-publications-upfiles-table.yaml
@@ -22,3 +22,6 @@ databaseChangeLog:
             columnNames: publication_id, upfile_id
             constraintName: pk_publications_upfiles
             tableName: publications_upfiles
+      rollback:
+        - dropTable:
+            tableName: publications_upfiles
