--- a/src/main/resources/db/changelog/v-1.0/db.changelog-v.1.0.yaml
+++ b/src/main/resources/db/changelog/v-1.0/db.changelog-v.1.0.yaml
@@ -26,12 +26,12 @@ databaseChangeLog:
   - include:
       file: "9-changeset-publications-upfiles-table.yaml"
       relativeToChangelogFile: true
-
-#  - include:
-#      file: "10-changeset-greeting-table.yaml"
-#      relativeToChangelogFile: true
-
-
+  - include:
+      file: "insert/insert-boards.yaml"
+      relativeToChangelogFile: true
+  - include:
+      file: "insert/insert-roles.yaml"
+      relativeToChangelogFile: true
 
 
 
