--- a/src/main/resources/db/changelog/v-1.0/1-create-users-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/1-create-users-table.yaml
@@ -12,6 +12,7 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: pk_users
                     nullable: false
               - column:
                   name: username
@@ -43,5 +44,8 @@ databaseChangeLog:
                   type: boolean
                   constraints:
                     nullable: false
+      rollback:
+        - dropTable:
+            tableName: users
 
 
