--- a/src/main/resources/db/changelog/v-1.0/6-create-publications-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/6-create-publications-table.yaml
@@ -12,6 +12,7 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: pk_publications
                     nullable: false
               - column:
                   name: name
@@ -38,3 +39,6 @@ databaseChangeLog:
                   constraints:
                     foreignKeyName: fk_board_id
                     references: boards(id)
+      rollback:
+        - dropTable:
+            tableName: publications
