--- a/src/main/resources/db/changelog/v-1.0/7-create-comments-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/7-create-comments-table.yaml
@@ -12,6 +12,7 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
+                    primaryKeyName: pk_comments
                     nullable: false
               - column:
                   name: text
@@ -39,3 +40,6 @@ databaseChangeLog:
                   constraints:
                     foreignKeyName: fk_parent_comment_id
                     references: comments(id)
+      rollback:
+        - dropTable:
+            tableName: comments
