--- a/src/main/resources/db/changelog/v-1.0/db.changelog-v.1.0.yaml
+++ b/src/main/resources/db/changelog/v-1.0/db.changelog-v.1.0.yaml
@@ -33,6 +33,9 @@ databaseChangeLog:
       file: "insert/insert-roles.yaml"
       relativeToChangelogFile: true
 
+  - include:
+      file: "insert/dummyData/insert-dummy-users.yaml"
+      relativeToChangelogFile: true
 
 
 
