--- a/src/main/resources/db/changelog/v-1.0/6-create-publications-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/6-create-publications-table.yaml
@@ -25,7 +25,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: date_of_creation
+                  name: created_at
                   type: date
               - column:
                   name: user_id
