--- a/src/main/resources/db/changelog/v-1.0/db.changelog-v.1.0.yaml
+++ b/src/main/resources/db/changelog/v-1.0/db.changelog-v.1.0.yaml
@@ -26,21 +26,26 @@ databaseChangeLog:
   - include:
       file: "9-changeset-publications-upfiles-table.yaml"
       relativeToChangelogFile: true
-#  - include:
-#      file: "insert/insert-boards.yaml"
-#      relativeToChangelogFile: true
+
+
+  - include:
+      file: "insert/insert-boards.yaml"
+      relativeToChangelogFile: true
   - include:
       file: "insert/insert-roles.yaml"
       relativeToChangelogFile: true
 
+
+
   - include:
       file: "insert/dummyData/insert-dummy-users.yaml"
       relativeToChangelogFile: true
-
-#  - include:
-#      file: "insert/dummyData/insert-dummy-publications.yaml"
-#      relativeToChangelogFile: true
-
+  - include:
+      file: "insert/dummyData/insert-dummy-publications.yaml"
+      relativeToChangelogFile: true
+  - include:
+      file: "insert/dummyData/insert-dummy-comments.yaml"
+      relativeToChangelogFile: true
 
 
 
