--- a/src/main/resources/db/changelog/v-1.0/7-create-comments-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/7-create-comments-table.yaml
@@ -3,13 +3,21 @@ databaseChangeLog:
       id: 7
       author: tofffee
       changes:
+        - createSequence:
+            dataType: bigint
+            incrementBy: 1
+            maxValue: 1000
+            minValue: 1
+            sequenceName: comments_id_seq_pk
+            startValue: 1
+            schemaName: public
         - createTable:
             tableName: comments
             columns:
               - column:
                   name: id
                   type: bigint
-                  autoIncrement: true
+                  valueSequenceNext: comments_id_seq_pk
                   constraints:
                     primaryKey: true
                     primaryKeyName: pk_comments
