--- a/src/main/resources/db/changelog/v-1.0/db.changelog-v.1.0.yaml
+++ b/src/main/resources/db/changelog/v-1.0/db.changelog-v.1.0.yaml
@@ -26,8 +26,17 @@ databaseChangeLog:
   - include:
       file: "9-changeset-publications-upfiles-table.yaml"
       relativeToChangelogFile: true
+  - include:
+      file: "10-changeset-dialogs-table.yaml"
+      relativeToChangelogFile: true
+  - include:
+      file: "11-changeset-users-dialogs-table.yaml"
+      relativeToChangelogFile: true
+#  - include:
+#      file: "12-changeset-chatmessages-table.yaml"
+#      relativeToChangelogFile: true
 
-
+  #insert
   - include:
       file: "insert/insert-boards.yaml"
       relativeToChangelogFile: true
@@ -35,8 +44,7 @@ databaseChangeLog:
       file: "insert/insert-roles.yaml"
       relativeToChangelogFile: true
 
-
-
+  #insert dummy data
   - include:
       file: "insert/dummyData/insert-dummy-users.yaml"
       relativeToChangelogFile: true
@@ -46,6 +54,12 @@ databaseChangeLog:
   - include:
       file: "insert/dummyData/insert-dummy-comments.yaml"
       relativeToChangelogFile: true
+#  - include:
+#      file: "insert/dummyData/insert-dummy-dialogs.yaml"
+#      relativeToChangelogFile: true
+#  - include:
+#      file: "insert/dummyData/insert-dummy-chatmessages.yaml"
+#      relativeToChangelogFile: true
 
 
 
