--- a/src/main/resources/db/changelog/v-1.0/12-changeset-chatmessages-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/12-changeset-chatmessages-table.yaml
@@ -1,4 +1,4 @@
-#databaseChangeLog:
-#  - include:
-#      file: "12-create-chatmessages-table.yaml"
-#      relativeToChangelogFile: true
+databaseChangeLog:
+  - include:
+      file: "12-create-chatmessages-table.yaml"
+      relativeToChangelogFile: true
